liberty-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liberty
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: liberty
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: liberty
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/liberty/websphere-liberty 
        imagePullPolicy: Always
        name: liberty
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: cm-volume
          mountPath: /opt/ibm/wlp/usr/servers/defaultServer
      volumes:
      - name: cm-volume
        configMap:
          name: liberty-server-xml
