liberty-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: liberty
spec:
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: liberty
  sessionAffinity: None
  type: ClusterIP
